crates/djls-semantic/tests/snapshots/corpus__repos__readthedocs.org__readthedocs__core__templatetags__core_tags.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "readthedocs.core.templatetags.core_tags::tag::doc_url":
    arg_constraints:
      - Min: 2
      - Max: 5
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: project
        required: true
        kind: Variable
        position: 0
      - name: version
        required: false
        kind: Variable
        position: 1
      - name: page
        required: false
        kind: Variable
        position: 2
      - name: path
        required: false
        kind: Variable
        position: 3
    as_var: strip
  "readthedocs.core.templatetags.core_tags::tag::readthedocs_version":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "readthedocs.core.templatetags.core_tags::tag::url_replace":
    arg_constraints:
      - Min: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: request
        required: true
        kind: Variable
        position: 0
      - name: field
        required: true
        kind: Variable
        position: 1
      - name: values
        required: false
        kind: VarArgs
        position: 2
    as_var: strip
filter_arities:
  "readthedocs.core.templatetags.core_tags::filter::escapejson":
    expects_arg: true
    arg_optional: true
  "readthedocs.core.templatetags.core_tags::filter::get_key_or_none":
    expects_arg: true
    arg_optional: false
  "readthedocs.core.templatetags.core_tags::filter::get_project":
    expects_arg: false
    arg_optional: false
  "readthedocs.core.templatetags.core_tags::filter::get_version":
    expects_arg: false
    arg_optional: false
  "readthedocs.core.templatetags.core_tags::filter::is_rich_select":
    expects_arg: false
    arg_optional: false
  "readthedocs.core.templatetags.core_tags::filter::key":
    expects_arg: true
    arg_optional: false
block_specs: {}
